@@ -1,7 +1,8 @@
 
 Version 1.0ea9 - ...
 
-- display AST tree while debugging
+- debugger: display now AST tree during debugging
+- debugger: can debug tree grammar (display input tree)
 - parse tree in debugger shows backtrack nodes (colorized)
 - can now export decision DFA and rule dependency graph as DOT file
 - new replace all feature in find dialog
